Changes
=======

2.3.3 (unreleased)
------------------

* ...

2.3.2 (2010/10/27)
------------------

* Ensure caching keys are always string. This is required by memcache
  implementations.

2.3.1 (2010/10/18)
------------------

* Fix cookie path for cookie session in case of virtual host hosting.

2.3 (2010/10/06)
----------------

* Initial release.